feat: Master Level HMS Expansion - Telehealth, Intelligent Search, AI Orchestration, Smart Inventory, and Security Hardening